...
                               if (currentUser?.uid == loadEvent?.creator || loadEvent == null) {
                                   eventDate = !eventDate
                               }
                           }) {
                               Icon(
                                   imageVector = Icons.Default.DateRange,
                                   contentDescription = "select date"
                               )
                           }
                       },
                       colors = TextFieldDefaults.textFieldColors(
                           backgroundColor = Color.Transparent,
                           textColor = MaterialTheme.colors.secondary
...
                       modifier = Modifier
                           .width(130.dp)
                           .height(50.dp)
                           .shadow(4.dp, shape = RoundedCornerShape(24.dp), ambientColor = Color(0x33000000))
                   ) {
                       Text(
                           text = "Cancel",
                           fontFamily = ubuntuFontFamily,
                           fontWeight = FontWeight.Bold,
                           fontSize = 24.sp,
                           color = Color(0xFFFFFFFF)
                       )
                   }
...
