...
                    colors = ButtonDefaults.buttonColors(
                        containerColor = Colors.Bittersweet, // Background color
                        contentColor = MaterialTheme.colors.primary  // Text color
                    ),
                ) {
                    androidx.compose.material3.Text(
                        text = "OK",
                        fontFamily = ubuntuFontFamily,
                        fontWeight = FontWeight.Bold,
                        fontSize = 24.sp,
                        color = MaterialTheme.colors.secondary
                    )
                }
...
